# newsapicli

./: .env  .gitignore  README.md  app.py  app_design.txt  hello.py  main.py  pyproject.toml
archive/: _main.py  main_api.py  main_orig.py
docs/: usage_examples.txt
newsapicli/: newsapi.py  options.py  utils.py
newsapicli/cli/: article.py
output/: everything.csv  out.csv  topheadlines.csv
tests/: flatten_json.py
